@@ -1,5 +1,10 @@
 #pragma once
 
+#include "ImageWnd.h"
+#include "MarkRequestStoreImage.h"
+
+#include "RainWindowsLAM.h"
+
 #include <queue>
 #include <string>
 #include <unordered_set>
@@ -9,8 +14,10 @@ namespace PixivBot
 {
 	namespace ImageManager
 	{
-		extern std::queue<std::pair<int, std::vector<std::string> *> > image_queue; //(image code, image filepaths vector pointer); all images in the queue are cached; recommendations are added to the queue and cached if the image is accepted by the user
-		extern std::unordered_set<int> processed, inqueue, awaiting;
-		extern std::vector<int> tmpbsfq;
+		extern std::queue<std::pair<int, std::vector<std::string> *> > img_queue; //(image code, image filepaths vector pointer); all images in the queue are cached; recommendations are added to the queue and cached if the image is accepted by the user
+		extern std::unordered_set<int> img_processed, in_img_queue, img_requesting;
+
+		void QueueRemCurImg ();
+		DWORD WINAPI CacheInitImages (LPVOID param);
 	}
 }
